- Added experimental support for CAS Proxy authentication.
- Added The Yahoo! User Interface Library (YUI) to the codebase. Very useful framework for building dynamic interfaces.
- Fixed bug in handling of repository paths and how nice uri was parsed with respect to that
- Added jquery 1.21 and jquery 1.22 and some additional plugins. Moredocs  to come later.

-------------------------------------------------------------------------------------
- InfoGlue 2.6.0 Final
-------------------------------------------------------------------------------------

Release notes
---------------------------------------
The autumn release 2007 of InfoGlue is here. As usual the new version includes a lot of major and minor changes.
Performance and security are allways improved but finetuning of existing features and bugfixes are also included.

Check out the changelog below for details. 

Thanx to all involved!!

The InfoGlue Team


Abbreviated Changelog from 2.5.0 Final 
---------------------------------------
- Added a new feature which let's you delete all children for a certain content.
- Fixed performance problem in import repository feature when you have a huge installation.
- Updated to OSCache 2.4
- Fixed a new default LRU-algorithm class for OSCache which actually throws away objects when they don't fit in the LRU-cache anymore. The default class shipped with OSCache only invalidated it - it was never removed and could hence not be garbage collected.
- Added possibility to have a thumbnail for each component/HTMLTemplate and also add a description which can then be seen when one tries to add a component and look at the component list dialog.
- Added support for checkboxes in component properties
- Added warning if non-binding properties was edited but not saved in the component editor view when one clicks to assign a binding property. This is so one does not loose the changes automatically.